# AWS-Class-Project

./: .gitignore  DEPLOYMENT.md  README.md  pyproject.toml  run.py
deploy/: cyberfolio.service  nginx-cyberfolio.conf
scripts/: generate_redacted_resume.py
src/cyberfolio/: __init__.py  content.py  schema.sql
src/cyberfolio/static/css/: style.css
src/cyberfolio/templates/: about.html  admin_login.html  admin_messages.html  base.html  blog.html  certifications.html  contact.html  home.html  projects.html  resume.html  services.html
tests/: test_app.py
